[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Spawner2.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]

transform/pos = Vector2( 320, 288 )
script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }
speed = 10
rate = null
size = null
mode = null

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( -90, 0 )

[node name="Position2D1" type="Position2D" parent="."]

transform/pos = Vector2( 90, 0 )

[node name="Position2D2" type="Position2D" parent="."]

transform/pos = Vector2( 0, 90 )

[node name="Position2D3" type="Position2D" parent="."]

transform/pos = Vector2( 0, -90 )

[node name="Position2D4" type="Position2D" parent="."]

transform/pos = Vector2( -90, -90 )

[node name="Position2D5" type="Position2D" parent="."]

transform/pos = Vector2( 90, -90 )

[node name="Position2D6" type="Position2D" parent="."]

transform/pos = Vector2( 90, 90 )

[node name="Position2D7" type="Position2D" parent="."]

transform/pos = Vector2( -90, 90 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


